--- a/database.cfg
+++ b/database.cfg
@@ -1,5 +1,7 @@
-$hostname = "127.0.0.1";
-$username = "root";
-$password = "";
-$dbName = "forumdb";
-$dbTable = "posts_data";
+<?php
+  $hostname = "127.0.0.1";
+  $username = "root";
+  $password = "";
+  $dbName = "forumdb";
+  $dbTable = "posts_data";
+?>
