--- a/database.cfg
+++ b/database.cfg
@@ -3,5 +3,6 @@
   $username = "root";
   $password = "";
   $dbName = "forumdb";
-  $dbTable = "posts_data";
+  $PostsTable = "posts_data";
+  $CmntsTable = "cmnts_data";
 ?>
